# 2025-002-credit-store-demo-rs

./: Cargo.toml  README.md  diesel.toml  requirements.txt
docs/: guide.md
migrations/2025-09-12-162639_create_credit_store/: down.sql  up.sql
migrations/2025-09-25-225000_create_coin_store/: down.sql  up.dbmts  up.sql
scripts/: diesel-postprocess.py  schema.rs.pre  schema.rs.replace
src/: lib.rs
src/autogen/: schema.rs
src/db/: actions.rs  event_accumulator.rs  event_accumulator_actions.rs  loader.rs  mod.rs  models.rs  watcher.rs
src/drivers/: logging.rs  mod.rs  shell.rs
src/macros/: diesel_hist_models.rs  mod.rs
tests/: basic.rs
