[package]
name = "credit_store_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
tap = "1.0.1"
itertools = "0.14.0"
log = "0.4.28"
thiserror = "2.0.16"
clap = { version = "4.5.47", features = ["cargo"] }
strum = { version = "0.27.0", features = ["derive", "strum_macros"] }

#shi = "0.1.5"
shi = { git = "https://github.com/LanHikari22/shi", tag = "0.1.6-unmerged" }

diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["sqlite"] }
env_logger = "0.11.8"
chrono = "0.4.42"
rand = "0.9.2"
diesel-derive-newtype = "2.1.2"
